Fix for case study

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1038,8 +1038,8 @@
                     factors, proteins, and kinases which take part in the upstream
                     regulation of the inputted gene list. X2K web also allows users to
                     analyze their differentially expressed gene lists using ChEA, G2N,
-                    and KEA individually. To read more about the concept of X2K, you
-                    can read about it <a href="http://www.maayanlab.net/X2K/">here</a>.
+                    and KEA individually. You
+                        can read about X2K concept on the <a href="http://www.maayanlab.net/X2K/">X2K standalone version website</a>.
                 </p>
 
                 <h4>Instructional Video</h4>
