--- a/src/main/webapp/index_beta.html
+++ b/src/main/webapp/index_beta.html
@@ -140,6 +140,15 @@
                         version website</a>.
                     </p>
                 </div>
+			    <!-- Loader -->
+			    <div class="row justify-content-center">
+				    <div class="col-sm-6 ">
+					    <div id="loader" class="progress">
+					        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+					             aria-valuemax="100" style="width:100%"></div>
+					    </div>
+				    </div>
+				</div> 
                 <form id="x2k-form" enctype="multipart/form-data" method="POST">
                     <div class="form-group">
                         <div class="row">
@@ -2055,5 +2064,8 @@ C1d' \
         <div class="col-sm-2 bg-light"></div>
     </div>
 </div>
+
+<div id="blocker"></div>
+
 </body>
 </html>
